about me pagecontent was changed and contact me page

--- a/templates/about.html
+++ b/templates/about.html
@@ -59,22 +59,23 @@
           </div>
           
           <div class="row">
-            <div class="col-md-10 col-md-offset-1">
+            <div class="col-md-10 col-md-offset-2">
               <div class="row">
                 <div class="col-xs-12 col-md-6">
-                  <h3>Consectetur adipiscing elit</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus at sem quis varius. 
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras ultrices hendrerit nisl.</p>
-                  <h3>Ut enim ad minim </h3>
-                  <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
-                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
-                  <h3>Maecenas luctus at sem quis varius</h3>
+                  <h3>Mechatronics engineer</h3>
+                  <p>I got my engineering degree from Piloto university in 2019.
+                  My first job was as support engineer at El Dorado airport, a year before my graduation, then on 2020 i got my first job as a software developer.</p>
+                  <h3>As developer</h3>
+                  <p>I started my first steps in developing at university, programing microprocessors,
+                  and creating small programs for signals analysis and image processing,
+                    one of my favorite projects was an autonomous car, it could parking in three different ways </p>
+                  <h3>Family</h3>
                   <p>
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem venenatis. Morbi accumsan iaculis blandit. Cras ultrices hendrerit nisl.</p>
+                  I am the youngest of four siblings, my grandparents died when I was a baby. Currently only my paternal grandmother is alive. By the way I'm Colombian
+                  </p>
                 </div>
                 <div class="col-xs-12 col-md-6">
-                  <img src="./static/assets/images/profil.jpg" class="img-responsive" alt="">
+                  <img src="./static/assets/images/profilews.jpg" class="img-responsive" alt="">
                 </div>
               </div>
             </div>
